[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steel_toes"

description = "Docs for the Steel Toes kedro plugin."

readme = "README.md"
requires-python = ">=3.7"
license = "MIT"


authors = [
  { name = "Waylon Walker", email = "waylon@waylonwalker.com" },
]


dependencies = ['markata~=0.7.0.dev0']
dynamic = ["version"]

[tool.hatch.version]
path = "steel_toes/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pyinstrument",
]

[tool.hatch.envs.default.scripts]
clean = "markata clean"
build = "markata build"
tui = "markata tui"
serve = "python -m http.server 8000 --directory=markout"
clean-build = ['clean', 'build',]
clean-tui = ['clean', 'build', 'tui']
